// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineQuote renders in default 1`] = `
.c0 {
  font-style: italic;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0::before {
  font-style: normal;
  margin-right: 0.1em;
}

.c0::after {
  font-style: normal;
  margin-left: 0.1em;
}

<q
  class="c0"
  lang="en"
>
  Quote
</q>
`;

exports[`InlineQuote renders in lang de 1`] = `
.c0 {
  font-style: italic;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0::before {
  font-style: normal;
  margin-right: 0.1em;
}

.c0::after {
  font-style: normal;
  margin-left: 0.1em;
}

<q
  class="c0"
  lang="de"
>
  Quote
</q>
`;

exports[`InlineQuote renders in lang en 1`] = `
.c0 {
  font-style: italic;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0::before {
  font-style: normal;
  margin-right: 0.1em;
}

.c0::after {
  font-style: normal;
  margin-left: 0.1em;
}

<q
  class="c0"
  lang="en"
>
  Quote
</q>
`;

exports[`InlineQuote renders in lang ja 1`] = `
.c0 {
  font-style: italic;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0::before {
  font-style: normal;
  margin-right: 0.1em;
}

.c0::after {
  font-style: normal;
  margin-left: 0.1em;
}

<q
  class="c0"
  lang="ja"
>
  Quote
</q>
`;
